# x

./: .gitignore  CMakeLists.txt  lexer.l  main.cpp  parser.y  readme.md
.github/workflows/: ci.yml
src/: ast.cpp  ast.h  ast_printer.cpp  ast_printer.h  codegen.cpp  codegen.h  compiler.cpp  compiler.h  compiler_runtime.h  driver.h  lexer.l  mangler.h  parser.y  pipeline.h  runtime.cpp  runtime.h  type.cpp  type.h  utils.cpp  utils.h
src/codegen/: class.cpp  codegen.cpp  codegen.h  decl.cpp  expr.cpp  function.cpp  gc.cpp  statement.cpp
src/gc/: gc.cpp  gc.h  pass.cpp  pass.h  strategy.cpp  strategy.h
src/pipes/: check_abstract_classes.cpp  check_abstract_classes.h  check_interfaces.cpp  check_interfaces.h  check_virtual_methods.cpp  check_virtual_methods.h  code_generator.cpp  code_generator.h  const_string_folding.cpp  const_string_folding.h  parse_code.cpp  parse_code.h  print_ast.cpp  print_ast.h  type_inferrer.cpp  type_inferrer.h  visitor.h
src/runtime/: array.cpp  array.h  casts.cpp  casts.h  print.cpp  print.h  range.cpp  range.h  runtime.cpp  runtime.h  string.cpp  string.h
src/runtime/gc/: gc.cpp  gc.h
tests/: abstract_class_test.cpp  casts_test.cpp  check_abstract_classes_test.cpp  check_interfaces_test.cpp  class_test.cpp  compiler_test_helper.cpp  compiler_test_helper.h  expr_test.cpp  flow_test.cpp  for_test.cpp  function_test.cpp  if_test.cpp  interface_test.cpp  math_test.cpp  operators_test.cpp  statement_test.cpp  tour_test.cpp  type_inferrer_test.cpp  while_test.cpp
tests/arrays/: append_test.cpp  array_test.cpp  is_empty_test.cpp  length_test.cpp
tests/strings/: concat_test.cpp  contains_test.cpp  ends_with_test.cpp  index_test.cpp  is_empty_test.cpp  length_test.cpp  starts_with_test.cpp  string_test.cpp  string_test.h  substring_test.cpp  to_lower_test.cpp  to_upper_test.cpp  trim_test.cpp
